frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app-argocd
  namespace: dev-frontend
  labels:
    # service can select this on this label named "frontend-app-argocd"
    app: frontend-app-argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      # deployment must know that which pod to be managed
      app: frontend-app-argocd
  template:
    metadata:
      labels:
        #  label pod to match the deployment selector
        app: frontend-app-argocd
    spec:
      containers:
      - name: frontend-app-argocd
        image: bitnami/nginx:latest
        # Always pull the latest image tagged "latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: web-port
          protocol: TCP
        # Health check using GET method and expected code 200
        # livenessProbe check every time, if fail Kube will restart container immediately and then check readinessProbe again.
        livenessProbe:
          httpGet:
            path: /frontend
            port: 8080
            scheme: HTTP
        # readinessProbe will be checked by Kube once on first start.
        readinessProbe:
          httpGet:
            path: /frontend
            port: 8080
            scheme: HTTP
