frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  # name: for specify that which application is this service for?
  name: frontend-app-argocd
  namespace: dev-frontend
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: frontend-app-argocd
